// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$7
<races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<3
<2
New York$6
<umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<7
<2
ap#6;<rrow \\\\<$5
<2
big a#5;<3
<urned$r$2ing$3s$$2
<2
chalk#56;<3u#54;<
<2
eol \\\\\\\\n$3w \\\\$$3
<scape \\\\\\\\\\\\$6
<2
fun journey$7wal#27;<5
<2
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3stic#27;<4$
<2
lift#56;<2
<ong w#86;<4
<2
ref \\\\#$3
<2
t#61;<
wa#62;<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$7
<races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<3
<2
New York$6
<umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<7
<2
ap#6;<rrow \\\\<$5
<2
big a#5;<3
<urned$r$2ing$3s$$2
<2
chalk#56;<3u#54;<
<2
eol \\\\\\\\n$3w \\\\$$3
<scape \\\\\\\\\\\\$6
<2
fun journey$7walk$6
<2
journalism$tic$2$3s$$2eyer$2man$2en$3$4ster$2i#58;<$3viality$3$4wly$$2yfuller$st$4ness$4$3lessn#124;<$4ou#129;<2ridden$3er$$i#58;<3ode$4stick$5$
<2
lift#56;<2
<ong w#86;<4
<2
ref \\\\#$3
<2
t#61;<
wa#62;<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$7
<races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<3
<2
New York$6
<umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<7
<2
ap#6;<rrow \\\\<$5
<2
big a#5;<3
<urned$r$2ing$3s$$2
<2
chalk#56;<3u#54;<
<2
eol \\\\\\\\n$3w \\\\$$3
<scape \\\\\\\\\\\\$6
<2
fun journey$7wal#27;<5
<2
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3stic#27;<4$
<2
lift#56;<2
<ong w#86;<4
<2
ref \\\\#$3
<2
t#61;<
wa#62;<2
"
`;

exports[`Import/Export serialize DAWG 10 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$7
<races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<3
<2
New York$6
<umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<7
<2
ap#6;<rrow \\\\<$5
<2
big a#5;<3
<urned$r$2ing$3s$$2
<2
chalk#56;<3u#54;<
<2
eol \\\\\\\\n$3w \\\\$$3
<scape \\\\\\\\\\\\$6
<2
fun journey$7wal#27;<5
<2
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3stic#27;<4$
<2
lift#56;<2
<ong w#86;<4
<2
ref \\\\#$3
<2
t#61;<
wa#62;<2
"
`;
